--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -14,5 +14,5 @@
     <item
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_baseline_notifications_active_24"
-        android:title="@string/title_notifications" />
+        android:title="Add-ons" />
 </menu>
